* styles + slow scroll

--- a/404.html
+++ b/404.html
@@ -18,41 +18,38 @@
         <header class="layout__header">
             <nav class="nav">
                 <ul class="nav__items-list">
-                    <li class="nav__item" id="workNavItem">
-                        <a class="nav__link" href="index.html#work">work</a>
-                    </li>
-                    <li class="nav__item" id="aboutNavItem">
-                        <a class="nav__link" href="index.html#about">about</a>
+                    <li class="nav__item">
+                        <a class="nav__link" href="index.html">home</a>
                     </li>
                 </ul>
             </nav>
             <div class="logo">
                 <a class="logo__link" href="index.html">tatiana shatilova</a>
             </div>
-            <div class="social">
-                <ul class="social__btns-list">
-                    <li class="social__item">
-                        <a class="social__link" title="github" rel="nofollow" href="https://github.com/Sufflavus" target="_blank">
+            <div class="contacts">
+                <ul class="contacts__btns-list">
+                    <li class="contacts__item">
+                        <a class="contacts__link" title="github" rel="nofollow" href="https://github.com/Sufflavus" target="_blank">
                             <i class="fa fa-github"></i>
                         </a>
                     </li>
-                    <li class="social__item">
-                        <a class="social__link" title="bitbucket" rel="nofollow" href="https://bitbucket.org/Sufflava/" target="_blank">
+                    <li class="contacts__item">
+                        <a class="contacts__link" title="bitbucket" rel="nofollow" href="https://bitbucket.org/Sufflava/" target="_blank">
                             <i class="fa fa-bitbucket"></i>
                         </a>
                     </li>
-                    <li class="social__item">
-                        <a class="social__link" title="codepen" rel="nofollow" href="https://codepen.io/sufflavus" target="_blank">
+                    <li class="contacts__item">
+                        <a class="contacts__link" title="codepen" rel="nofollow" href="https://codepen.io/sufflavus" target="_blank">
                             <i class="fa fa-codepen"></i>
                         </a>
                     </li>
-                    <li class="social__item">
-                        <a class="social__link" title="linkedin" rel="nofollow" href="https://www.linkedin.com/in/shatilova-t" target="_blank">
+                    <li class="contacts__item">
+                        <a class="contacts__link" title="linkedin" rel="nofollow" href="https://www.linkedin.com/in/shatilova-t" target="_blank">
                             <i class="fa fa-linkedin"></i>
                         </a>
                     </li>
-                    <li class="social__item">
-                        <a class="social__link" title="mail" href="mailto:tatashat@gmail.com">
+                    <li class="contacts__item">
+                        <a class="contacts__link" title="mail" href="mailto:tatashat@gmail.com">
                             <i class="fa fa-envelope-o"></i>
                         </a>
                     </li>
@@ -67,7 +64,7 @@
                 <div class="not-found__sub-title">Ooops!</div>
                 <div class="not-found__text">Page not found.</div>
                 <div class="btn-home-wrapper">
-                    <a class="btn-home" title="mail" href="index.html">
+                    <a class="btn-home" title="home" href="index.html">
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
