--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Tatiana Shatilova's Portfolio</title>
         
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="css/reset.css" type="text/css" rel="stylesheet" media="screen,projection"/> 
-        <link href="css/layout.css" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/reset.css?v=1" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/layout.css?v=1" type="text/css" rel="stylesheet" media="screen,projection"/> 
 
         <script src="https://use.fontawesome.com/21bd0e91c3.js"></script>
     </head>
@@ -190,7 +190,7 @@
             crossorigin="anonymous">
         </script>
 
-        <script src="js/common.js"></script> 
+        <script src="js/common.js?v=1"></script> 
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
