--- a/404.html
+++ b/404.html
@@ -7,8 +7,9 @@
         <title>Tatiana Shatilova's Portfolio</title>
         
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="css/reset.css?v=1" type="text/css" rel="stylesheet" media="screen,projection"/> 
-        <link href="css/layout.css?v=2" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/reset.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/layout.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/not-found.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
 
         <script src="https://use.fontawesome.com/21bd0e91c3.js"></script>
     </head>
@@ -25,35 +26,6 @@
             </nav>
             <div class="logo">
                 <a class="logo__link" href="index.html">tatiana shatilova</a>
-            </div>
-            <div class="contacts">
-                <ul class="contacts__btns-list">
-                    <li class="contacts__item">
-                        <a class="contacts__link" title="github" rel="nofollow" href="https://github.com/Sufflavus" target="_blank">
-                            <i class="fa fa-github"></i>
-                        </a>
-                    </li>
-                    <li class="contacts__item">
-                        <a class="contacts__link" title="bitbucket" rel="nofollow" href="https://bitbucket.org/Sufflava/" target="_blank">
-                            <i class="fa fa-bitbucket"></i>
-                        </a>
-                    </li>
-                    <li class="contacts__item">
-                        <a class="contacts__link" title="codepen" rel="nofollow" href="https://codepen.io/sufflavus" target="_blank">
-                            <i class="fa fa-codepen"></i>
-                        </a>
-                    </li>
-                    <li class="contacts__item">
-                        <a class="contacts__link" title="linkedin" rel="nofollow" href="https://www.linkedin.com/in/shatilova-t" target="_blank">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li class="contacts__item">
-                        <a class="contacts__link" title="mail" href="mailto:tatashat@gmail.com">
-                            <i class="fa fa-envelope-o"></i>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </header>        
         
