--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="css/reset.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
         <link href="css/layout.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
-        <link href="css/contact-envelope.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/contact-envelope.css?v=4" type="text/css" rel="stylesheet" media="screen,projection"/> 
         <link href="css/project-tile.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
         <link href="css/skills-set.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
 
@@ -231,7 +231,7 @@
                                 <i class="fa fa-envelope-o fa-2x"></i>
                             </a>
                             <a class="button contact-button contact-button--linkedin" rel="nofollow"
-                                href="https://us.linkedin.com/pub/tatiana-shatilova/81/94/260" target="_blank">
+                                href="https://www.linkedin.com/in/shatilova-t" target="_blank">
                                 <i class="button__pulse contact-button__pulse"></i>
                                 <i class="fa fa-linkedin fa-2x"></i>
                             </a>
