--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="css/reset.css?v=3" type="text/css" rel="stylesheet" media="screen,projection"/> 
-        <link href="css/layout.css?v=5" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/layout.css?v=6" type="text/css" rel="stylesheet" media="screen,projection"/> 
         <link href="css/contact-envelope.css?v=5" type="text/css" rel="stylesheet" media="screen,projection"/> 
-        <link href="css/project-tile.css?v=5" type="text/css" rel="stylesheet" media="screen,projection"/> 
+        <link href="css/project-tile.css?v=6" type="text/css" rel="stylesheet" media="screen,projection"/> 
         <link href="css/skills-set.css?v=5" type="text/css" rel="stylesheet" media="screen,projection"/> 
 
         <script src="https://use.fontawesome.com/21bd0e91c3.js"></script>
@@ -101,7 +101,7 @@
                         </div>
                     </a>
                     <a class="project-tile project-tile__mint" rel="nofollow"
-                        href="https://github.com/Sufflavus/Mint" target="_blank">
+                        href="https://bitbucket.org/Sufflava/Mint" target="_blank">
                         <div class="project-tile__placeholder">
                             <div class="project-tile__info">
                                 <div class="project-tile__name">Mint</div>
@@ -110,7 +110,7 @@
                         </div>
                     </a>
                     <a class="project-tile project-tile__linq-es-6" rel="nofollow"
-                        href="https://github.com/Sufflavus/javascript-es6-linq-examples" target="_blank">
+                        href="https://bitbucket.org/Sufflava/javascript-es6-linq-examples" target="_blank">
                         <div class="project-tile__placeholder">
                             <div class="project-tile__info">
                                 <div class="project-tile__name">LINQ to ES6</div>
@@ -119,7 +119,7 @@
                         </div>
                     </a>
                     <a class="project-tile project-tile__open-source" rel="nofollow"
-                        href="https://github.com/Sufflavus" target="_blank">
+                        href="https://bitbucket.org/Sufflava/" target="_blank">
                         <div class="project-tile__placeholder">
                             <div class="project-tile__info">
                                 <div class="project-tile__name">Pet Projects</div>
@@ -248,6 +248,12 @@
                                 href="https://bitbucket.org/Sufflava/" target="_blank">
                                 <i class="button__pulse contact-button__pulse"></i>
                                 <i class="fa fa-bitbucket fa-2x"></i>
+                            </a>
+                            <br class="contact-envelope__buttons-separator"/>
+                            <a class="button contact-button contact-button--github" rel="nofollow"
+                                href="https://github.com/Sufflavus" target="_blank">
+                                <i class="button__pulse contact-button__pulse"></i>
+                                <i class="fa fa-github fa-2x"></i>
                             </a>
                         </div>
                     </div>
