--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div>Hi! I’m Tatiana Shatilova.</div>
                             <div>I’m a Software Developer based in Finland.</div>
                         </div>
-                        <div class="bogus-img__hint">Scroll down to see my work!</div>
+                        <div class="bogus-img__hint">Scroll down to see my work.</div>
                     </div>
                 </div>
             </div>
